Small ui fixes (#464)
* Fix button hover/margin

* Fixes transaction history padding + hide horizontal scroll

* Add pointer cursor

--- a/app/containers/TransactionHistory/TransactionHistory.scss
+++ b/app/containers/TransactionHistory/TransactionHistory.scss
@@ -14,7 +14,7 @@
 
     .transactions {
         flex: 1 1 auto;
-        overflow: scroll;
+        overflow-y: scroll;
     }
 }
 
